[package]
name = "fun_capture"
version = "0.1.0"
authors = ["Marvin Countryman <marvinc@siqinc.com>"]
edition = "2018"

[profile.release]
debug = true

[[bench]]
name = "capture"
harness = false

[dependencies]
clap = "3.0.0-beta.2"
block = "0.1"

[dev-dependencies]
image = "0.23"
piston = "0.52.0"
piston-texture = "0.8"
piston2d-graphics = "0.37.0"
pistoncore-glutin_window = "0.66.0"
piston2d-opengl_graphics = "0.74.0"
criterion = "0.3.3"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.9"
features = [
  "std",
  "debug",
  "impl-default",

  "winuser",
  "wingdi",
  "windef",
]
